--- a/WebOsadnici/Views/Home/Index.cshtml
+++ b/WebOsadnici/Views/Home/Index.cshtml
@@ -6,4 +6,5 @@
     <h1 class="display-4">Welcome</h1>
     <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
     <a href="Hra">hra</a>
+    <a href="Hra/Nova">Nová hra</a>
 </div>
