--- a/WebOsadnici/Views/Hra/Index.cshtml
+++ b/WebOsadnici/Views/Hra/Index.cshtml
@@ -7,7 +7,7 @@
         @foreach(var h in Model)
         {
             <tr>
-                <td><a href="Prugeh/@h.Id">@h.Id</a></td>
+                <td><a href="Hra/Prubeh/@h.Id">@h.Id</a></td>
                 
             </tr>
         }
