--- a/WebOsadnici/Views/Hra/Prubeh.cshtml
+++ b/WebOsadnici/Views/Hra/Prubeh.cshtml
@@ -8,18 +8,18 @@
         string cislo=(p.cislo!=0) ? $@"<circle cx='{sirka / 2}' cy='{vyska / 2}' r='{Math.Min(sirka, vyska) / 8}' fill='white' stroke='black' stroke-width='2' style='pointer-events: none;' />
                 <text x='{sirka / 2}' y='{vyska / 2}' text-anchor='middle' alignment-baseline='middle' fill='black' font-weight='bold' font-size='{Math.Min(sirka, vyska) / 6}' style='pointer-events: none;'>{p.cislo}</text>" : "";
         return $@"
-            <svg id='{p.Id}' style='position: absolute; pointer-events: none;
+            <svg style='position: absolute; pointer-events: none;
                     top: {odsazeniY}px;
                     left: {odsazeniX}px;'
                     width='{sirka}px'
                     height='{vyska}px'
                     xmlns='http://www.w3.org/2000/svg' alt='{p.surovina.Nazev}'>
-                <polygon points='{sirka / 2},0 {sirka},{vyska / 3} {sirka},{2 * vyska / 3} {sirka / 2},{vyska} 0,{2 * vyska / 3} 0,{vyska / 3}'  style='fill:{p.surovina.BackColor}; pointer-events: auto;'  />
+                <polygon class='policko' id='{p.Id}' points='{sirka / 2},0 {sirka},{vyska / 3} {sirka},{2 * vyska / 3} {sirka / 2},{vyska} 0,{2 * vyska / 3} 0,{vyska / 3}'  style='fill:{p.surovina.BackColor}; pointer-events: auto;'  />
                 <clipPath id='hexMask'>
-                    <polygon points='{sirka / 2},0 {sirka},{vyska / 3} {sirka},{2 * vyska / 3} {sirka / 2},{vyska} 0,{2 * vyska / 3} 0,{vyska / 3}' style='pointer-events: auto;' />
+                    <polygon points='{sirka / 2},0 {sirka},{vyska / 3} {sirka},{2 * vyska / 3} {sirka / 2},{vyska} 0,{2 * vyska / 3} 0,{vyska / 3}' style='pointer-events: none;' />
                 </clipPath>
-                <image xlink:href='{p.surovina.ImageUrl}' width='80%' height='80%' x='10%' y='10%' clip-path='url(#hexMask)' style='pointer-events: none;' />
-                {cislo}
+                <image xlink:href='../../{p.surovina.ImageUrl}' width='80%' height='80%' x='10%' y='10%' clip-path='url(#hexMask)' style='pointer-events: none;' />
+            {cislo}
             </svg>";
     }
     public string VykresleniCesty(Cesta c)
@@ -36,13 +36,13 @@
             default: polygon = $"{9 * sirka / 10},0 {sirka},0 {sirka},{1 * vyska / 10} {1 * sirka / 10},{vyska} 0,{vyska} 0,{9 * vyska / 10}"; break;
         }
         return $@"
-            <svg id='{c.Id}' style='position: absolute; pointer-events: none;
+            <svg style='position: absolute; pointer-events: none;
                     top: {odsazeniY}px;
                     left: {odsazeniX}px;'
                     width='{sirka}px'
                     height='{vyska}px'
                     xmlns='http://www.w3.org/2000/svg' alt='cesta'>
-                <polygon points='{polygon}'  style='fill:black; pointer-events: auto;'  />
+                <polygon class='cesta' id='{c.Id}' points='{polygon}'  style='fill:black; pointer-events: auto;'  />
             </svg>";
     }
     public string VykresleniRozcesti(Rozcesti r)
@@ -53,39 +53,51 @@
         int sirka = Rozcesti.velikost.Width * Mapka.rozmeryMrizky.Width;
         string nazev = (r.hrac == null) ? "Prazdne" : r.hrac.Name;
         return $@"
-            <svg id='{r.Id}' style='position: absolute; pointer-events: none;
-                    top: {odsazeniY}px;
-                    left: {odsazeniX}px;'
-                    width='{sirka}px'
-                    height='{vyska}px'
-                    xmlns='http://www.w3.org/2000/svg' alt='{nazev} rozcesti'>
-                <circle cx = '{sirka / 2}' cy = '{vyska / 2}' r = '{Math.Min(sirka, vyska) / 4}' stroke = 'black' stroke-width = '3' fill = 'black' style='pointer-events: auto;' />
+            <svg style='position: absolute; pointer-events: none;
+                top: {odsazeniY}px;
+                left: {odsazeniX}px;'
+                width='{sirka}px'
+                height='{vyska}px'
+                xmlns='http://www.w3.org/2000/svg' alt='{nazev} rozcesti'>
+            <circle class='rozcesti' id='{r.Id}' cx='{sirka / 2}' cy='{vyska / 2}' r='{Math.Min(sirka, vyska) / 4}' stroke='black' stroke-width='3' fill='black' style='pointer-events: auto;' />
+            <image xlink:href='' width='{Math.Min(sirka, vyska) * 0.7}' height='{Math.Min(sirka, vyska) * 0.7}' x='{sirka / 2 - (Math.Min(sirka, vyska) * 0.35)}' y='{vyska / 2 - (Math.Min(sirka, vyska) * 0.35)}' display='none' />
             </svg>";
     }
 }
 @model Hra
 @{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Pruběh hry";
 }
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="main-container">
+    <div id="side-panel">
 
-    @foreach (var policko in Model.mapka.policka)
-    {
-        @Html.Raw(VykresleniPolicka(policko))
-    }
-    @foreach (var cesta in Model.mapka.cesty)
-    {
-        @Html.Raw(VykresleniCesty(cesta))
-    }@foreach (var rozcesti in Model.mapka.rozcesti)
-    {
-        @Html.Raw(VykresleniRozcesti(rozcesti))
-    }
+        <p>Už se připojili hráči:</p>
+        <ol>
+            @foreach (StavHrace s in Model.stavy)
+            {
+                <li style="color: @s.barva.Name;">@s.hrac.UserName</li>
+            }
+        </ol>
+        <p id="text">text</p>
+        <p id="kliknutacesta">cesta</p>
+        <p id="kliknutepolicko">policko</p>
+        <p id="kliknuterozcesti">rozcesti</p>
 
-    <p id="id-hry">@Model.Id</p>
-    <p id="text">text</p>
-    <p id="receivedSvgId">prijaty</p>
+    </div>
+    <div id="map-container">
+        @foreach (var policko in Model.mapka.policka)
+        {
+            @Html.Raw(VykresleniPolicka(policko))
+        }
+        @foreach (var cesta in Model.mapka.cesty)
+        {
+            @Html.Raw(VykresleniCesty(cesta))
+        }
+        @foreach (var rozcesti in Model.mapka.rozcesti)
+        {
+            @Html.Raw(VykresleniRozcesti(rozcesti))
+        }
+    </div>
 </div>
 <script src="~/js/signalr/dist/browser/signalr.js"></script>
 <script src="~/js/click.js"></script>
