--- a/WebOsadnici/wwwroot/css/site.css
+++ b/WebOsadnici/wwwroot/css/site.css
@@ -1,18 +1,42 @@
 html {
-  font-size: 14px;
-}
-
-@media (min-width: 768px) {
-  html {
-    font-size: 16px;
-  }
+  font-size: 16px;
 }
 
 html {
   position: relative;
-  min-height: 100%;
+  display: flex;
+  flex-direction:column;
+  min-height:100%;
 }
 
 body {
-  margin-bottom: 60px;
+    flex-grow:1;
+    min-height: 100%;
+    min-width: 100%;
+    display: flex;
+    flex-direction:column;
+}
+main {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+}
+#main-container {
+    flex-grow: 1;
+    display: flex;
+    flex-direction: row;
+    min-height: 100%;
+    min-width: 100%;
+}
+
+#map-container {
+    flex: 1;
+    overflow: auto;
+    position: relative;
+    border: 1px solid black;
+}
+
+#side-panel {
+    width: 30%;
+    border: 1px solid black; 
 }
