--- a/WebOsadnici/wwwroot/css/site.css
+++ b/WebOsadnici/wwwroot/css/site.css
@@ -4,29 +4,19 @@ html {
 
 html {
   position: relative;
-  display: flex;
-  flex-direction:column;
   min-height:100%;
 }
 
 body {
-    flex-grow:1;
-    min-height: 100%;
-    min-width: 100%;
-    display: flex;
-    flex-direction:column;
+
 }
-main {
-    flex-grow: 1;
-    display: flex;
-    flex-direction: column;
-}
+
 #main-container {
     flex-grow: 1;
     display: flex;
     flex-direction: row;
-    min-height: 100%;
-    min-width: 100%;
+    min-height: 850px;
+    min-width: 1200px;
 }
 
 #map-container {
