Změny ve hře podle signalR

--- a/WebOsadnici/Views/Hra/Prubeh.cshtml
+++ b/WebOsadnici/Views/Hra/Prubeh.cshtml
@@ -78,6 +78,7 @@
                 <li style="color: @s.barva.Name;">@s.hrac.UserName</li>
             }
         </ol>
+        <p id="hra">@Model.Id</p>
         <p id="text">text</p>
         <p id="kliknutacesta">cesta</p>
         <p id="kliknutepolicko">policko</p>
