--- a/WebOsadnici/wwwroot/css/site.css
+++ b/WebOsadnici/wwwroot/css/site.css
@@ -1,42 +1,146 @@
 html {
-  font-size: 16px;
+    font-size: 16px;
+    position: relative;
+    height: 100%;
+    width: 100%;
 }
 
-html {
-  position: relative;
-  display: flex;
-  flex-direction:column;
-  min-height:100%;
+a {
+    text-decoration: none;
+    color: inherit;
 }
 
 body {
-    flex-grow:1;
-    min-height: 100%;
-    min-width: 100%;
     display: flex;
-    flex-direction:column;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 100%;
+    width: 100%;
 }
 main {
+    flex-shrink:1;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
+    
 }
 #main-container {
     flex-grow: 1;
     display: flex;
     flex-direction: row;
-    min-height: 100%;
-    min-width: 100%;
+    height: 100%;
+    width: 100%;
+    justify-content: space-between
 }
 
 #map-container {
-    flex: 1;
     overflow: auto;
     position: relative;
-    border: 1px solid black;
+
 }
 
-#side-panel {
-    width: 30%;
-    border: 1px solid black; 
+#tlacitkovy-panel {
+    border-right: 5px double gray;
+    border-radius: 4px;
 }
+#stavovy-panel {
+    border-left: 5px double gray;
+    border-radius: 4px;
+}
+
+.ovladaci_panel{
+    width: 20%;
+    display: flex;
+    flex-direction:column;
+    justify-content: space-between;
+}
+
+.ovladaci_panel div {
+    border: 5px double gray;
+    border-radius: 4px;
+}
+
+.list-hra-detail img {
+    width: 300px;
+    height: 200px;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
+}
+.list-hra-detail {
+    
+    width: fit-content;
+    text-decoration: none;
+    color: black;
+    background: #ffffff;
+    display: flex;
+    border: 1px solid #000000;
+    border-radius: 5px;
+    margin: 10px;
+    flex-direction: column;
+}
+.list-hra-aktualni {
+    font-weight: bold;
+    border-top: 1px solid #000000;
+}
+.list-hra-ostatni {
+    border-top: 1px solid #000000;
+}
+.list-her {
+    list-style: none;
+    display:flex;
+    flex-wrap:wrap;
+}
+.nadpis {
+    display:flex;
+    justify-content:space-between;
+}
+.button {
+    font-size: 20px;
+    
+    display: inline-block;
+    padding: 10px 20px;
+    background-color: #007BFF; 
+    color: #ffffff;
+    border: none;
+    border-radius: 4px;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s;
+}
+
+.button:hover {
+    background-color: #0056b3;
+}
+.panel {
+    background-color: #333;
+    color: #fff;
+}
+#instrukce {
+    font-size: 20px;
+    font-weight: bold;
+    flex: 1;
+}
+#panel_tlacitka {
+    display: flex;
+    flex-direction: column;
+    align-content: stretch;
+    font-size: 20px;
+    font-weight: bold;
+}
+ #panel_smeny {
+     flex: 1;
+     overflow-y: auto;
+ }
+ #panel_stavby {
+     display: flex;
+     overflow-x: auto;
+ }
+ #panel_stavby img {
+     width: 60px;
+     height: 60px;
+ }
+ .stavba {
+     display:flex;
+     flex-direction:column;
+ }
