--- a/WebOsadnici/Views/Hra/Pripojit.cshtml
+++ b/WebOsadnici/Views/Hra/Pripojit.cshtml
@@ -42,7 +42,7 @@
             <button type="submit">Odeslat</button>
         </form>
     </div>
-    <div id="map-container" style="width: @(Mapka.rozmeryMrizky.Width*@Pole.velikost.Width*6)px">
+    <div id="map-container" style="width: @(Mapka.RozmeryMrizky.Width*@Pole.Velikost.Width*6)px">
         <partial name="Mapka" />
     </div>
 </div>
